--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "open": "~0.0.4"
+    "opn": "~5.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
