--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "node": ">= 0.6.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt"
   },
   "dependencies": {
-    "opn": "~5.4.0"
+    "opn": "^5.4.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-contrib-jshint": "~0.6.4"
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-jshint": "^2.0.0"
   },
   "keywords": [
     "gruntplugin",
